--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+/* /contents under body are in this format */
 body {
     font-family: 'Courier New', Courier, monospace;
     line-height: 1.5;
